--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
